toList() replace with .collect(Collectors.toList())